fix broken css

--- a/client/src/components/History/History.module.css
+++ b/client/src/components/History/History.module.css
@@ -14,6 +14,7 @@
     list-style-type: none;
     border-bottom: 1px solid;
     overflow-y: scroll;
+    max-height: 475px;
 }
 
 .history > li {
